Fixing mobile horizontal scroll bug on homepage

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -13,7 +13,6 @@ body {
     z-index: $zindex-fixed;
     background: #FFF;
     border-bottom: solid 1px $gray-300;
-    box-shadow: 0 1px 5px rgba(0,0,0,0.1);
 
     .maw-logo {
         width: 70px;
@@ -282,8 +281,6 @@ h6, .h6 {
 
     // Carousel arrow styles
     .carousel-arrows {
-        left: 50px;
-
         a {
             text-decoration: none;
         }
